--- a/Decorist/sass/_aditional-info.scss
+++ b/Decorist/sass/_aditional-info.scss
@@ -54,7 +54,11 @@
 		padding: 10px;
 
 		@include media("<=phone") {
-			height: 110px;
+			height: 10em;
+			}
+
+		@include media(">phone","<tablet") {
+			height: 8em;
 			}
 	}
 
@@ -130,7 +134,7 @@ input[type="file"]{
 	label{
 		display: block;
 		margin: 0;
-		line-height: 1;
+		line-height: 1.5;
 		margin-bottom: 5px;
 		text-transform: uppercase;
 		font-size: 0.75em;
