--- a/Decorist/sass/_payment-form.scss
+++ b/Decorist/sass/_payment-form.scss
@@ -88,19 +88,17 @@
 		overflow: hidden;
 		background: url('../img/select-errow.jpg') no-repeat 90% 50%;
 		margin: 5px 10px 15px 0;
+		-webkit-appearance: none;
+		-moz-appearance: none;
 
 	&[name="date-year"]{
 		width: 70px;
 		padding: 0 0 0 10px;
+		}
 	}
+	select::-ms-expand {
+		display: none;
 
-	}
-
-	input::-webkit-outer-spin-button,
-	input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
-    -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
 }
