--- a/Decorist/stylesheets/main.css
+++ b/Decorist/stylesheets/main.css
@@ -81,19 +81,21 @@ a:hover {
   float: right;
   text-align: center;
   margin-top: 10px;
+  cursor: pointer;
 }
-/* line 63, ../sass/_body-head.scss */
+/* line 64, ../sass/_body-head.scss */
 .button-color {
   background: #78a8bb;
   color: #fff;
   text-transform: uppercase;
   font-size: 0.75em;
 }
-/* line 70, ../sass/_body-head.scss */
+/* line 71, ../sass/_body-head.scss */
 .button-transparent {
   color: #78a8bb;
   font-family: "Justus Italic";
   font-size: 0.785em;
+  background: transparent;
 }
 
 /* line 1, ../sass/_nav.scss */
@@ -136,11 +138,12 @@ main .nav {
 @media (max-width: 767px) {
   /* line 26, ../sass/_nav.scss */
   main .nav {
-    width: 100%;
+    width: 20em;
+    margin: 2.125em auto 1.875em;
     padding: 0;
   }
 }
-/* line 39, ../sass/_nav.scss */
+/* line 40, ../sass/_nav.scss */
 main .nav::before {
   content: '';
   display: block;
@@ -151,7 +154,7 @@ main .nav::before {
   top: 28%;
   left: 0;
 }
-/* line 50, ../sass/_nav.scss */
+/* line 51, ../sass/_nav.scss */
 main .nav-item {
   color: #999;
   font-size: 1.125em;
@@ -161,18 +164,17 @@ main .nav-item {
   font-family: "Justus Italic";
 }
 @media (max-width: 960px) {
-  /* line 50, ../sass/_nav.scss */
+  /* line 51, ../sass/_nav.scss */
   main .nav-item {
     margin: 0 7%;
   }
 }
 @media (max-width: 767px) {
-  /* line 50, ../sass/_nav.scss */
+  /* line 51, ../sass/_nav.scss */
   main .nav-item {
-    width: 11%;
     min-width: 92px;
     font-size: 0.8rem;
-    margin: 0;
+    margin: 0 5px;
   }
 }
 /* line 69, ../sass/_nav.scss */
@@ -223,9 +225,8 @@ main .nav-item.active::before {
   font-family: "Justus Italic";
   font-weight: normal;
   margin: 15px 0 0 0;
-  position: relative;
 }
-/* line 21, ../sass/_shopping-card.scss */
+/* line 20, ../sass/_shopping-card.scss */
 .shopping-card h3::after {
   content: '';
   display: block;
@@ -233,66 +234,57 @@ main .nav-item.active::before {
   border-bottom: 1px solid #fcfcfc;
   margin-top: 12px;
 }
-/* line 29, ../sass/_shopping-card.scss */
+/* line 28, ../sass/_shopping-card.scss */
 .shopping-card h3 span {
   color: #999;
 }
-/* line 34, ../sass/_shopping-card.scss */
+/* line 33, ../sass/_shopping-card.scss */
 .shopping-card-continue {
-  display: block;
+  display: inline-block;
   line-height: 24px;
   font-size: 0.625em;
   color: #78a8bb;
   text-transform: uppercase;
   text-decoration: none;
-  position: absolute;
-  top: 28px;
-  left: 210px;
+  margin-left: 10px;
 }
-@media (max-width: 767px) {
-  /* line 34, ../sass/_shopping-card.scss */
-  .shopping-card-continue {
-    position: static;
-    margin: 10px 0;
-  }
-}
-/* line 51, ../sass/_shopping-card.scss */
+/* line 43, ../sass/_shopping-card.scss */
 .shopping-card table {
   width: 100%;
   font-size: 0.625em;
   text-transform: uppercase;
   border-collapse: collapse;
 }
-/* line 61, ../sass/_shopping-card.scss */
+/* line 53, ../sass/_shopping-card.scss */
 .shopping-card-list thead tr {
   border-bottom: 1px solid #fcfcfc;
   height: 30px;
 }
-/* line 68, ../sass/_shopping-card.scss */
+/* line 60, ../sass/_shopping-card.scss */
 .shopping-card-list tbody td {
   padding: 15px 0;
 }
-/* line 73, ../sass/_shopping-card.scss */
+/* line 65, ../sass/_shopping-card.scss */
 .shopping-card-list-item {
   width: 45%;
 }
 @media (max-width: 767px) {
-  /* line 73, ../sass/_shopping-card.scss */
+  /* line 65, ../sass/_shopping-card.scss */
   .shopping-card-list-item {
     width: 25%;
   }
 }
-/* line 80, ../sass/_shopping-card.scss */
+/* line 72, ../sass/_shopping-card.scss */
 .shopping-card-list-quantity, .shopping-card-list-price {
   width: 17.2%;
 }
 @media (max-width: 767px) {
-  /* line 80, ../sass/_shopping-card.scss */
+  /* line 72, ../sass/_shopping-card.scss */
   .shopping-card-list-quantity, .shopping-card-list-price {
     width: 25%;
   }
 }
-/* line 89, ../sass/_shopping-card.scss */
+/* line 81, ../sass/_shopping-card.scss */
 .shopping-card-list img {
   width: 3.75rem;
   height: 3.75rem;
@@ -300,19 +292,12 @@ main .nav-item.active::before {
   float: left;
 }
 @media (max-width: 768px) {
-  /* line 89, ../sass/_shopping-card.scss */
-  .shopping-card-list img {
-    width: 25%;
-    height: auto;
-  }
-}
-@media (max-width: 767px) {
-  /* line 89, ../sass/_shopping-card.scss */
+  /* line 81, ../sass/_shopping-card.scss */
   .shopping-card-list img {
     display: none;
   }
 }
-/* line 104, ../sass/_shopping-card.scss */
+/* line 92, ../sass/_shopping-card.scss */
 .shopping-card-list .item-name {
   display: block;
   float: left;
@@ -320,16 +305,15 @@ main .nav-item.active::before {
   line-height: 3.75rem;
   vertical-align: middle;
 }
-@media (max-width: 768px) {
-  /* line 104, ../sass/_shopping-card.scss */
+@media (max-width: 767px) {
+  /* line 92, ../sass/_shopping-card.scss */
   .shopping-card-list .item-name {
-    line-height: 1.5;
-    padding-top: 15px;
-    width: 50%;
+    width: 60px;
+    line-height: 2;
   }
 }
-/* line 119, ../sass/_shopping-card.scss */
-.shopping-card-list button {
+/* line 106, ../sass/_shopping-card.scss */
+.shopping-card-list .count-button {
   width: 11px;
   line-height: 11px;
   padding: 0;
@@ -341,7 +325,7 @@ main .nav-item.active::before {
   position: relative;
   cursor: pointer;
 }
-/* line 132, ../sass/_shopping-card.scss */
+/* line 119, ../sass/_shopping-card.scss */
 .shopping-card-list .remove::after {
   content: 'remove';
   display: block;
@@ -351,36 +335,36 @@ main .nav-item.active::before {
   left: 20px;
   top: 0;
 }
-/* line 142, ../sass/_shopping-card.scss */
+/* line 129, ../sass/_shopping-card.scss */
 .shopping-card-list .counter {
   display: inline-block;
   font-size: 10px;
   margin: 0 10px;
 }
 @media (max-width: 767px) {
-  /* line 142, ../sass/_shopping-card.scss */
+  /* line 129, ../sass/_shopping-card.scss */
   .shopping-card-list .counter {
     margin: 0 5px;
   }
 }
-/* line 155, ../sass/_shopping-card.scss */
+/* line 142, ../sass/_shopping-card.scss */
 .shopping-card-summary {
   background: #f7f7f7;
   color: #999;
 }
-/* line 159, ../sass/_shopping-card.scss */
+/* line 146, ../sass/_shopping-card.scss */
 .shopping-card-summary td {
   vertical-align: bottom;
   height: 24px;
 }
-/* line 164, ../sass/_shopping-card.scss */
+/* line 151, ../sass/_shopping-card.scss */
 .shopping-card-summary td:nth-child(2),
 .shopping-card-summary td:nth-child(3) {
   width: 70px;
   padding-right: 40px;
   text-align: right;
 }
-/* line 173, ../sass/_shopping-card.scss */
+/* line 160, ../sass/_shopping-card.scss */
 .shopping-card-summary tfoot td {
   height: 42px;
   vertical-align: middle;
@@ -388,34 +372,36 @@ main .nav-item.active::before {
   color: #222;
 }
 @media (max-width: 767px) {
-  /* line 173, ../sass/_shopping-card.scss */
+  /* line 160, ../sass/_shopping-card.scss */
   .shopping-card-summary tfoot td {
     font-size: 1em;
   }
 }
-/* line 183, ../sass/_shopping-card.scss */
+/* line 170, ../sass/_shopping-card.scss */
 .shopping-card-summary tfoot td a {
   display: block;
   padding-left: 1em;
   color: #78a8bb;
   text-decoration: none;
 }
-/* line 194, ../sass/_shopping-card.scss */
+/* line 181, ../sass/_shopping-card.scss */
 .shopping-card .button {
   width: 135px;
   margin-top: 15px;
   font-size: 12px;
   font-family: Futura;
+  border: none;
+  padding: 0;
 }
 @media (max-width: 767px) {
-  /* line 194, ../sass/_shopping-card.scss */
+  /* line 181, ../sass/_shopping-card.scss */
   .shopping-card .button {
     width: 48%;
     margin: 15px 1% 0;
   }
 }
 
-/* line 207, ../sass/_shopping-card.scss */
+/* line 196, ../sass/_shopping-card.scss */
 .shopping-photo {
   display: block;
   float: right;
@@ -424,7 +410,7 @@ main .nav-item.active::before {
   border: 3px solid #f2f2f2;
 }
 @media (max-width: 767px) {
-  /* line 207, ../sass/_shopping-card.scss */
+  /* line 196, ../sass/_shopping-card.scss */
   .shopping-photo {
     display: none;
   }
@@ -570,19 +556,17 @@ main .nav-item.active::before {
   overflow: hidden;
   background: url("../img/select-errow.jpg") no-repeat 90% 50%;
   margin: 5px 10px 15px 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
-/* line 92, ../sass/_payment-form.scss */
+/* line 94, ../sass/_payment-form.scss */
 .form-paymnet select[name="date-year"] {
   width: 70px;
   padding: 0 0 0 10px;
 }
 /* line 99, ../sass/_payment-form.scss */
-.form-paymnet input::-webkit-outer-spin-button,
-.form-paymnet input::-webkit-inner-spin-button {
-  /* display: none; <- Crashes Chrome on hover */
-  -webkit-appearance: none;
-  margin: 0;
-  /* <-- Apparently some margin are still there even though it's hidden */
+.form-paymnet select::-ms-expand {
+  display: none;
 }
 
 /* line 1, ../sass/_aditional-info.scss */
@@ -647,10 +631,17 @@ main .nav-item.active::before {
 @media (max-width: 320px) {
   /* line 49, ../sass/_aditional-info.scss */
   .form textarea {
-    height: 110px;
+    height: 10em;
   }
 }
-/* line 61, ../sass/_aditional-info.scss */
+@media (min-width: 321px) and (max-width: 767px) {
+  /* line 49, ../sass/_aditional-info.scss */
+  .form textarea {
+    height: 8em;
+  }
+}
+
+/* line 65, ../sass/_aditional-info.scss */
 .form .personal-recommendations {
   text-transform: uppercase;
   font-size: 0.75em;
@@ -658,28 +649,28 @@ main .nav-item.active::before {
   margin-bottom: 10px;
   margin-top: 20px;
 }
-/* line 69, ../sass/_aditional-info.scss */
+/* line 73, ../sass/_aditional-info.scss */
 .form ::-webkit-input-placeholder {
   color: #ccc;
   font-size: 12px;
 }
-/* line 73, ../sass/_aditional-info.scss */
+/* line 77, ../sass/_aditional-info.scss */
 .form ::-moz-placeholder {
   color: #ccc;
   font-size: 12px;
 }
-/* line 77, ../sass/_aditional-info.scss */
+/* line 81, ../sass/_aditional-info.scss */
 .form :-moz-placeholder {
   color: #ccc;
   font-size: 12px;
 }
-/* line 81, ../sass/_aditional-info.scss */
+/* line 85, ../sass/_aditional-info.scss */
 .form :-ms-input-placeholder {
   color: #ccc;
   font-size: 12px;
 }
 
-/* line 87, ../sass/_aditional-info.scss */
+/* line 91, ../sass/_aditional-info.scss */
 .text-photos {
   margin: 0;
   font-size: 12px;
@@ -688,7 +679,7 @@ main .nav-item.active::before {
   margin: 15px 0;
 }
 
-/* line 95, ../sass/_aditional-info.scss */
+/* line 99, ../sass/_aditional-info.scss */
 .upload-photoes {
   height: 130px;
   border: 1px solid #fcfcfc;
@@ -696,7 +687,7 @@ main .nav-item.active::before {
   background: url("../img/downloadPhotos.png") no-repeat 50% 10px;
   margin-bottom: 15px;
 }
-/* line 102, ../sass/_aditional-info.scss */
+/* line 106, ../sass/_aditional-info.scss */
 .upload-photoes p {
   width: 220px;
   font-size: 14px;
@@ -705,43 +696,43 @@ main .nav-item.active::before {
   text-align: center;
   margin: 75px auto 0;
 }
-/* line 111, ../sass/_aditional-info.scss */
+/* line 115, ../sass/_aditional-info.scss */
 .upload-photoes span {
   font-size: 10px;
   margin-right: 10px;
 }
-/* line 116, ../sass/_aditional-info.scss */
+/* line 120, ../sass/_aditional-info.scss */
 .upload-photoes .photo-upload-label {
   font-size: 10px;
   color: #78a8bb;
   cursor: pointer;
 }
 
-/* line 124, ../sass/_aditional-info.scss */
+/* line 128, ../sass/_aditional-info.scss */
 input[type="file"] {
   display: none;
 }
 
-/* line 130, ../sass/_aditional-info.scss */
+/* line 134, ../sass/_aditional-info.scss */
 .form-additional label {
   display: block;
   margin: 0;
-  line-height: 1;
+  line-height: 1.5;
   margin-bottom: 5px;
   text-transform: uppercase;
   font-size: 0.75em;
 }
-/* line 139, ../sass/_aditional-info.scss */
+/* line 143, ../sass/_aditional-info.scss */
 .form-additional .link-pinterest-input {
   display: block;
   margin-bottom: 20px;
 }
 
-/* line 145, ../sass/_aditional-info.scss */
+/* line 149, ../sass/_aditional-info.scss */
 .bord-upload-label {
   margin-bottom: 20px;
 }
-/* line 148, ../sass/_aditional-info.scss */
+/* line 152, ../sass/_aditional-info.scss */
 .bord-upload-label::after {
   content: 'attach decorist design board';
   display: block;
@@ -758,25 +749,25 @@ input[type="file"] {
   cursor: pointer;
 }
 
-/* line 165, ../sass/_aditional-info.scss */
+/* line 169, ../sass/_aditional-info.scss */
 .buttons-container {
   text-align: center;
   margin-top: 5px;
 }
-/* line 169, ../sass/_aditional-info.scss */
+/* line 173, ../sass/_aditional-info.scss */
 .buttons-container::before {
   content: '';
   display: block;
   border-bottom: 1px solid #fcfcfc;
   margin-bottom: 12px;
 }
-/* line 176, ../sass/_aditional-info.scss */
+/* line 180, ../sass/_aditional-info.scss */
 .buttons-container .button {
   display: inline-block;
   float: none;
   margin: 0;
 }
-/* line 182, ../sass/_aditional-info.scss */
+/* line 186, ../sass/_aditional-info.scss */
 .buttons-container .button-draft {
   width: 110px;
   background: #f2f2f2;
