--- a/Decorist/stylesheets/main.css
+++ b/Decorist/stylesheets/main.css
@@ -19,44 +19,45 @@ body {
 }
 
 /* line 11, ../sass/_body-head.scss */
-a:hover {
+a:hover,
+.button:hover {
   opacity: 0.5;
 }
 
-/* line 15, ../sass/_body-head.scss */
+/* line 16, ../sass/_body-head.scss */
 .wrap {
   width: 58.75rem;
   padding: 0 10px;
   margin: 0 auto;
 }
 @media (max-width: 960px) {
-  /* line 15, ../sass/_body-head.scss */
+  /* line 16, ../sass/_body-head.scss */
   .wrap {
     width: 100%;
   }
 }
 
-/* line 25, ../sass/_body-head.scss */
+/* line 26, ../sass/_body-head.scss */
 .clear-fix::after {
   content: '';
   display: table;
   clear: both;
 }
 
-/* line 31, ../sass/_body-head.scss */
+/* line 32, ../sass/_body-head.scss */
 .header {
   width: 58.75rem;
   margin: 0 auto;
   padding: 10px 10px 10px 0;
 }
 @media (max-width: 960px) {
-  /* line 31, ../sass/_body-head.scss */
+  /* line 32, ../sass/_body-head.scss */
   .header {
     width: 100%;
   }
 }
 
-/* line 41, ../sass/_body-head.scss */
+/* line 42, ../sass/_body-head.scss */
 .logo {
   display: block;
   width: 12.5rem;
@@ -65,13 +66,13 @@ a:hover {
   background: url("../img/logo.png") no-repeat;
 }
 @media (max-width: 767px) {
-  /* line 41, ../sass/_body-head.scss */
+  /* line 42, ../sass/_body-head.scss */
   .logo {
     clear: both;
   }
 }
 
-/* line 53, ../sass/_body-head.scss */
+/* line 54, ../sass/_body-head.scss */
 .button {
   display: block;
   text-decoration: none;
@@ -83,14 +84,14 @@ a:hover {
   margin-top: 10px;
   cursor: pointer;
 }
-/* line 64, ../sass/_body-head.scss */
+/* line 65, ../sass/_body-head.scss */
 .button-color {
   background: #78a8bb;
   color: #fff;
   text-transform: uppercase;
   font-size: 0.75em;
 }
-/* line 71, ../sass/_body-head.scss */
+/* line 72, ../sass/_body-head.scss */
 .button-transparent {
   color: #78a8bb;
   font-family: "Justus Italic";
@@ -312,7 +313,7 @@ main .nav-item.active::before {
     line-height: 2;
   }
 }
-/* line 106, ../sass/_shopping-card.scss */
+/* line 105, ../sass/_shopping-card.scss */
 .shopping-card-list .count-button {
   width: 11px;
   line-height: 11px;
@@ -325,7 +326,7 @@ main .nav-item.active::before {
   position: relative;
   cursor: pointer;
 }
-/* line 119, ../sass/_shopping-card.scss */
+/* line 118, ../sass/_shopping-card.scss */
 .shopping-card-list .remove::after {
   content: 'remove';
   display: block;
@@ -335,36 +336,36 @@ main .nav-item.active::before {
   left: 20px;
   top: 0;
 }
-/* line 129, ../sass/_shopping-card.scss */
+/* line 128, ../sass/_shopping-card.scss */
 .shopping-card-list .counter {
   display: inline-block;
   font-size: 10px;
   margin: 0 10px;
 }
 @media (max-width: 767px) {
-  /* line 129, ../sass/_shopping-card.scss */
+  /* line 128, ../sass/_shopping-card.scss */
   .shopping-card-list .counter {
     margin: 0 5px;
   }
 }
-/* line 142, ../sass/_shopping-card.scss */
+/* line 139, ../sass/_shopping-card.scss */
 .shopping-card-summary {
   background: #f7f7f7;
   color: #999;
 }
-/* line 146, ../sass/_shopping-card.scss */
+/* line 143, ../sass/_shopping-card.scss */
 .shopping-card-summary td {
   vertical-align: bottom;
   height: 24px;
 }
-/* line 151, ../sass/_shopping-card.scss */
+/* line 148, ../sass/_shopping-card.scss */
 .shopping-card-summary td:nth-child(2),
 .shopping-card-summary td:nth-child(3) {
   width: 70px;
   padding-right: 40px;
   text-align: right;
 }
-/* line 160, ../sass/_shopping-card.scss */
+/* line 157, ../sass/_shopping-card.scss */
 .shopping-card-summary tfoot td {
   height: 42px;
   vertical-align: middle;
@@ -372,19 +373,19 @@ main .nav-item.active::before {
   color: #222;
 }
 @media (max-width: 767px) {
-  /* line 160, ../sass/_shopping-card.scss */
+  /* line 157, ../sass/_shopping-card.scss */
   .shopping-card-summary tfoot td {
     font-size: 1em;
   }
 }
-/* line 170, ../sass/_shopping-card.scss */
+/* line 167, ../sass/_shopping-card.scss */
 .shopping-card-summary tfoot td a {
   display: block;
   padding-left: 1em;
   color: #78a8bb;
   text-decoration: none;
 }
-/* line 181, ../sass/_shopping-card.scss */
+/* line 178, ../sass/_shopping-card.scss */
 .shopping-card .button {
   width: 135px;
   margin-top: 15px;
@@ -393,15 +394,19 @@ main .nav-item.active::before {
   border: none;
   padding: 0;
 }
+/* line 186, ../sass/_shopping-card.scss */
+.shopping-card .button:disabled {
+  opacity: 0.2;
+}
 @media (max-width: 767px) {
-  /* line 181, ../sass/_shopping-card.scss */
+  /* line 178, ../sass/_shopping-card.scss */
   .shopping-card .button {
     width: 48%;
     margin: 15px 1% 0;
   }
 }
 
-/* line 196, ../sass/_shopping-card.scss */
+/* line 197, ../sass/_shopping-card.scss */
 .shopping-photo {
   display: block;
   float: right;
@@ -410,7 +415,7 @@ main .nav-item.active::before {
   border: 3px solid #f2f2f2;
 }
 @media (max-width: 767px) {
-  /* line 196, ../sass/_shopping-card.scss */
+  /* line 197, ../sass/_shopping-card.scss */
   .shopping-photo {
     display: none;
   }
@@ -517,26 +522,27 @@ main .nav-item.active::before {
   border-radius: 5px;
   margin: 5px 10px 0 0;
   padding-left: 10px;
+  outline-color: #ff5730;
 }
-/* line 53, ../sass/_payment-form.scss */
+/* line 54, ../sass/_payment-form.scss */
 .form-paymnet input[type="checkbox"] {
   width: auto;
   float: left;
   margin: 0 5px 0 0;
 }
-/* line 59, ../sass/_payment-form.scss */
+/* line 60, ../sass/_payment-form.scss */
 .form-paymnet input.zip-code {
   width: 100px;
 }
-/* line 63, ../sass/_payment-form.scss */
+/* line 64, ../sass/_payment-form.scss */
 .form-paymnet input.card-number {
   width: 260px;
 }
-/* line 67, ../sass/_payment-form.scss */
+/* line 68, ../sass/_payment-form.scss */
 .form-paymnet input.cvv {
   width: 50px;
 }
-/* line 72, ../sass/_payment-form.scss */
+/* line 73, ../sass/_payment-form.scss */
 .form-paymnet fieldset {
   width: 150px;
   float: left;
@@ -544,7 +550,7 @@ main .nav-item.active::before {
   padding: 0;
   margin: 0;
 }
-/* line 80, ../sass/_payment-form.scss */
+/* line 81, ../sass/_payment-form.scss */
 .form-paymnet select {
   display: block;
   float: left;
@@ -559,12 +565,12 @@ main .nav-item.active::before {
   -webkit-appearance: none;
   -moz-appearance: none;
 }
-/* line 94, ../sass/_payment-form.scss */
+/* line 95, ../sass/_payment-form.scss */
 .form-paymnet select[name="date-year"] {
   width: 70px;
   padding: 0 0 0 10px;
 }
-/* line 99, ../sass/_payment-form.scss */
+/* line 100, ../sass/_payment-form.scss */
 .form-paymnet select::-ms-expand {
   display: none;
 }
