--- a/Decorist/sass/_payment-form.scss
+++ b/Decorist/sass/_payment-form.scss
@@ -49,6 +49,7 @@
 		border-radius: 5px;
 		margin: 5px 10px 0 0;
 		padding-left: 10px;
+		outline-color: $orange;
 
 		&[type="checkbox"]{
 			width: auto;
