--- a/Decorist/stylesheets/main.css
+++ b/Decorist/stylesheets/main.css
@@ -178,7 +178,13 @@ main .nav-item {
     margin: 0 5px;
   }
 }
-/* line 69, ../sass/_nav.scss */
+@media (max-width: 320px) {
+  /* line 51, ../sass/_nav.scss */
+  main .nav-item {
+    margin: 0;
+  }
+}
+/* line 74, ../sass/_nav.scss */
 main .nav-item::before {
   counter-increment: nav;
   content: counter(nav);
@@ -195,11 +201,11 @@ main .nav-item::before {
   font-family: Futura;
   z-index: 2;
 }
-/* line 86, ../sass/_nav.scss */
+/* line 91, ../sass/_nav.scss */
 main .nav-item.active {
   color: #222;
 }
-/* line 89, ../sass/_nav.scss */
+/* line 94, ../sass/_nav.scss */
 main .nav-item.active::before {
   border-color: #222;
 }
