--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 body{
 	height: 100vh;
 	margin: 0;
-	background: rgba(214,143,183,1);
-	background: radial-gradient(ellipse at center, rgba(226,149,193,1) 0%, rgba(97,75,85,1) 86%, rgba(76,63,67,1) 100%);
+	background: #211F1E;
 	font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -18,59 +17,141 @@ h3{
 }
 
 h1{
-	color: #211F1E;
-	font-size: 70px;
+	color: #fff;
+	font-size: 25px;
 	line-height: 1;
 	margin: 20px 0;
 	text-align: center;
 }
 
 h3{
-	font-size: 28px;
-	margin: 10px 0;
+	font-size: 18px;
+	margin: 10px 0 0;
+}
+main{
+	padding: 0 20px;
+}
+main a{
+	color: #fff;
+	text-decoration: none;
+}
+.portfolio-item img{
+	display: none;
 }
 
 @media screen and (min-width: 720px){
+	h1{
+		font-size: 40px;
+	}
 	main{
-		width: 100%;
-		max-width: 720px;
+		width: 720px;
 		margin: 0 auto;
 		padding: 5px;
-		background: #211F1E;
+		border-radius: 6px;
 	}
 	.portfolio-item{
-		display: block;
 		margin: 5px;
 		float: left;
-	}
-	.portfolio-item img{
-		width: 100%;
-		height: 100%;
+		border-radius: 3px;
+		position: relative;
+		cursor: pointer;
+		overflow: hidden;
 	}
 	.portfolio-item-small{
 		width: 170px;
 		height: 170px;
-		background: gold;
 	}
 	.portfolio-item-vertical{
 		width: 170px;
 		height: 350px;
-		background: blue;
 	}
 	.portfolio-item-horizontal{
 		width: 350px;
 		height: 170px;
-		background: green;
 	}
 	.portfolio-item-big{
 		width: 350px;
 		height: 350px;
+	}
+	.portfolio-item img{
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+	.item-right{
 		float: right;
-		background: red;
+	}
+	.hover-grey{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background: rgba(33,31,30,0.7);
+		cursor: pointer;
+		color: #fff;
+		padding: 5px 0 0 10px;
+		box-sizing: border-box;
+	}
+	.hover-grey ul{
+		margin: 0;
+		padding: 0 0 0 15px;
+	}
+	.hover-grey li{
+		line-height: 1.3;
+		font-size: 14px;
+	}
+	.hover-grey h3{
+		display: none;
 	}
 }
 
-@media screen and (min-width: 920px){
+@media screen and (min-width: 1040px){
+	body{
+		background: rgba(214,143,183,1);
+		background: radial-gradient(ellipse at center, rgba(226,149,193,1) 0%, rgba(97,75,85,1) 86%, rgba(76,63,67,1) 100%);
+	}
+	h1{
+		color: #211F1E;
+		font-size: 70px;
+	}
+	h3{
+		font-size: 28px;
+	}
 	main{
+		width: 1040px;
+		background: #211F1E;
+	}
+	.portfolio-item-small{
+		width: 250px;
+		height: 250px;
+	}
+	.portfolio-item-vertical{
+		width: 250px;
+		height: 510px;
+	}
+	.portfolio-item-horizontal{
+		width: 510px;
+		height: 250px;
+	}
+	.portfolio-item-big{
+		width: 510px;
+		height: 510px;
+	}
+	.hover-grey{
+		background: rgba(33,31,30,0.9);
+		transform: translateY( -100%);
+		transition: transform .5s ease;
+		padding: 0 30px;
+	}
+	.hover-grey h3{
+		display: block;
+		margin: 10px 0;
+	}
+	.hover-grey li{
+		line-height: 1.5;
+	}
+	.portfolio-item:hover .hover-grey{
+		transform: translateY(0);
 	}
 }
